[tool.poetry]
name = "loop-o-matic"
version = "0.1.0"
description = "A really stripped down python implementation of the Eternal Jukebox"
authors = ["Foxify52 <93794624+Foxify52@users.noreply.github.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
librosa = "^0.10.1"
numpy = "^1.26.2"
scipy = "^1.11.4"
soundfile = "^0.12.1"
networkx = "^3.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
